Provide overflow safe clearfix. Fixes #11.

--- a/stylesheets/zen/_grids.scss
+++ b/stylesheets/zen/_grids.scss
@@ -41,17 +41,22 @@ $zen-reverse-all-floats: false !default;
 
 
 //
-// Zen Grids requires the clearfix mixin.
-//
-@import "compass/utilities/general/clearfix";
-
-
-//
 // Apply this to the grid container element.
 //
 @mixin zen-grid-container () {
   position: relative;
-  @include clearfix;
+  // We use the "micro clearfix", instead of Compass' clearfix or pie-clearfix.
+  &:before,
+  &:after {
+    content: "";
+    display: table;
+  }
+  &:after {
+    clear: both;
+  }
+  @if ($legacy-support-for-ie6 or $legacy-support-for-ie7) {
+    *zoom: 1;
+  }
 }
 
 //
